<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lblTitreDescParcours"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:id="@+id/lblTitreDescParcours"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblCoordDepartDescParcours"
        android:text="@string/lblCoordonneesDepart"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CoordDepartDescParcours"
        android:text="@string/CoordDepartDescParcours"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblCoordArriveDescParcours"
        android:text="@string/lblCoordonneesArrive"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CoordArriveDescParcours"
        android:text="@string/CoordArriveDescParcours"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/lblConducteurVoitureDescParcours"
    android:text="@string/lblConducteurVoitureDescParcours"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:textStyle="bold"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ConducteurVoitureDescParcours"
        android:text="@string/ConducteurVoitureDescParcours"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblContributionDescParcours"
        android:text="@string/lblContributionDescParcours"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ContributionDescParcours"
        android:text="@string/ContributionDescParcours"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDemanderDescParcours"
        android:text="@string/btnDemanderDescParcours"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="20dp"/>
    </LinearLayout>
</LinearLayout>