<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100px"
        android:paddingTop="10px"
        android:textSize="40sp"
        android:text="@string/textViewChoix"
        android:layout_gravity="center_horizontal"/>

<Button
    android:id="@+id/idBtnPassager"
    android:layout_width="fill_parent"
    android:layout_marginTop="70dp"
    android:layout_height="150dp"
    android:text="@string/btnPassagerText"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:onClick="onClickPasager"/>

<Button
    android:id="@+id/idBtnConducteur"
    android:layout_width="fill_parent"
    android:layout_marginTop="70dp"
    android:layout_height="150dp"
    android:text="@string/btnConducteurText"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:onClick="onClickConducteur"/>
</LinearLayout>