<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:id='@+id/lblTitreRechercheTrajet'
        android:text="@string/lblPageRecherche"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblPointDepart"
        android:text="@string/lblRecherchePointA"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:id="@+id/txtPointA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblPointArrive"
        android:text="@string/lblRecherchePointB"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:id="@+id/txtPointB" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblDate1"
        android:text="@string/lblRecherchePointB"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>